--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "js/lib/typecode-js"]
 	path = js/lib/typecode-js
-	url = https://typecode@github.com/typecode/typecode-js.git
+	url = git@github.com:typecode/typecode-js.git
