--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "js/lib/typecode-js"]
-	path = js/lib/typecode-js
+[submodule "www/js/lib/typecode-js"]
+	path = www/js/lib/typecode-js
 	url = git@github.com:typecode/typecode-js.git
